new group detail page

--- a/grouplist_care.html
+++ b/grouplist_care.html
@@ -46,7 +46,7 @@
             </form>
             <ul class="nav navbar navbar-top-links navbar-left mbn navbar-to-right">
                 <li class="switch">
-                    <span><a>Group</a></span><span>|</span><span><a>Job</a></span>
+                    <span><a href="#" class="active">Group</a>|<a href="joblist_care.html">Job</a></span>
                 </li>
                 <li class="dropdown topbar-user">
                     <a data-hover="dropdown" href="#" class="dropdown-toggle"><img src="./images/User1.png" alt="" class="img-responsive img-circle" />&nbsp;<span class="hidden-xs">John Doe</span>&nbsp;<span class="caret"></span>
@@ -103,69 +103,128 @@
         <div id="page-wrapper">
             <!--BEGIN CONTENT-->
             <div class="page-content" style="padding-top:80px;">
-                <div class="panel">
-                    <div class="panel-body">
-                        <div class="row">
-                            <div class="col-xs-4"><img src="./images/group01.png" style="width: 70px; height: 70px;" class="media-object"></div>
-                            <div class="group-info col-xs-8">
-                                Group Apple <button type="button" class="btn btn-info btn-xs btn-to-right">Apply </button>
-                                <p><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star-half-o"></i></p>
-                                <p>We have been taking care of: bulldog, golden retriever</p>
-                            </div>
+                <div class="group-list">
+                    <div class="panel">
+                        <div class="panel-body">
+                            <div class="row">
+                                <div class="col-xs-4"><img src="./images/group01.png" style="width: 70px; height: 70px;" class="media-object"></div>
+                                <div class="group-info col-xs-8">
+                                    Group Apple <button type="button" class="btn btn-info btn-xs btn-to-right">Apply </button>
+                                    <p><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star-half-o"></i></p>
+                                    <p>We have been taking care of: bulldog, golden retriever</p>
+                                </div>
 
+                            </div>
+                        </div>
+                    </div>
+                    <div class="panel">
+                        <div class="panel-body">
+                            <div class="row">
+                                <div class="col-xs-4"><img src="./images/group02.png" style="width: 70px; height: 70px;" class="media-object"></div>
+                                <div class="group-info col-xs-8">
+                                    Group Apple <button type="button" class="btn btn-info btn-xs btn-to-right">Apply </button>
+                                    <p><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star-half-o"></i></p>
+                                    <p>We have been taking care of: bulldog, golden retriever</p>
+                                </div>
+
+                            </div>
+                        </div>
+                    </div>
+                    <div class="panel">
+                        <div class="panel-body">
+                            <div class="row">
+                                <div class="col-xs-4"><img src="./images/group03.png" style="width: 70px; height: 70px;" class="media-object"></div>
+                                <div class="group-info col-xs-8">
+                                    Group Apple <button type="button" class="btn btn-info btn-xs btn-to-right">Apply </button>
+                                    <p><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star-half-o"></i></p>
+                                    <p>We have been taking care of: bulldog, golden retriever</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="panel">
+                        <div class="panel-body">
+                            <div class="row">
+                                <div class="col-xs-4"><img src="./images/group04.png" style="width: 70px; height: 70px;" class="media-object"></div>
+                                <div class="group-info col-xs-8">
+                                    Group Apple <button type="button" class="btn btn-info btn-xs btn-to-right">Apply </button>
+                                    <p><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star-half-o"></i></p>
+                                    <p>We have been taking care of: bulldog, golden retriever</p>
+                                </div>
+
+                            </div>
+                        </div>
+                    </div>
+                    <div class="panel">
+                        <div class="panel-body">
+                            <div class="row">
+                                <div class="col-xs-4"><img src="./images/group05.png" style="width: 70px; height: 70px;" class="media-object"></div>
+                                <div class="group-info col-xs-8">
+                                    Group Apple <button type="button" class="btn btn-info btn-xs btn-to-right">Apply </button>
+                                    <p><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star-half-o"></i></p>
+                                    <p>We have been taking care of: bulldog, golden retriever</p>
+                                </div>
+
+                            </div>
                         </div>
                     </div>
                 </div>
-                <div class="panel">
-                    <div class="panel-body">
-                        <div class="row">
-                            <div class="col-xs-4"><img src="./images/group02.png" style="width: 70px; height: 70px;" class="media-object"></div>
-                            <div class="group-info col-xs-8">
-                                Group Apple <button type="button" class="btn btn-info btn-xs btn-to-right">Apply </button>
-                                <p><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star-half-o"></i></p>
-                                <p>We have been taking care of: bulldog, golden retriever</p>
-                            </div>
-
+                <div class = "group-detail">
+                    <div class="row">
+                        <div class="col-xs-4"><img src="./images/group01.png" style="width: 100px; height: 100px;" class="media-object"></div>
+                        <div class="col-xs-8">
+                            <table class="table table-striped table-hover">
+                                <tbody>
+                                <tr>
+                                    <td>Group Rating</td>
+                                    <td><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star-half-o"></i></td>
+                                </tr>
+                                <tr>
+                                    <td>Group Name:</td>
+                                    <td>Catt</td>
+                                </tr>
+                                <tr>
+                                    <td>Group Leader:</td>
+                                    <td>Brown</td>
+                                </tr>
+                                </tbody>
+                            </table>
                         </div>
                     </div>
-                </div>
-                <div class="panel">
-                    <div class="panel-body">
-                        <div class="row">
-                            <div class="col-xs-4"><img src="./images/group03.png" style="width: 70px; height: 70px;" class="media-object"></div>
-                            <div class="group-info col-xs-8">
-                                Group Apple <button type="button" class="btn btn-info btn-xs btn-to-right">Apply </button>
-                                <p><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star-half-o"></i></p>
-                                <p>We have been taking care of: bulldog, golden retriever</p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="panel">
-                    <div class="panel-body">
-                        <div class="row">
-                            <div class="col-xs-4"><img src="./images/group04.png" style="width: 70px; height: 70px;" class="media-object"></div>
-                            <div class="group-info col-xs-8">
-                                Group Apple <button type="button" class="btn btn-info btn-xs btn-to-right">Apply </button>
-                                <p><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star-half-o"></i></p>
-                                <p>We have been taking care of: bulldog, golden retriever</p>
-                            </div>
-
-                        </div>
-                    </div>
-                </div>
-                <div class="panel">
-                    <div class="panel-body">
-                        <div class="row">
-                            <div class="col-xs-4"><img src="./images/group05.png" style="width: 70px; height: 70px;" class="media-object"></div>
-                            <div class="group-info col-xs-8">
-                                Group Apple <button type="button" class="btn btn-info btn-xs btn-to-right">Apply </button>
-                                <p><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star-half-o"></i></p>
-                                <p>We have been taking care of: bulldog, golden retriever</p>
-                            </div>
-
-                        </div>
-                    </div>
+                    <table class="table table-striped table-hover">
+                        <tbody>
+                        <tr>
+                            <td width="10%">Location:</td>
+                            <td>Brisbane</td>
+                        </tr>
+                        <tr>
+                            <td width="10%">Group Tags:</td>
+                            <td>Cat, Small Pets, T</td>
+                        </tr>
+                        <tr>
+                            <td colspan="2">Group Members:</td>
+                        </tr>
+                        <tr>
+                            <td colspan="2">
+                                <div class="members">
+                                    <img src="./images/User1.png" style="width: 30px; height: 30px;" class="media-object">
+                                    <img src="./images/User2.png" style="width: 30px; height: 30px;" class="media-object">
+                                    <img src="./images/User3.png" style="width: 30px; height: 30px;" class="media-object">
+                                    <img src="./images/User4.png" style="width: 30px; height: 30px;" class="media-object">
+                                </div>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td colspan="2">Group Description</td>
+                        </tr>
+                        <tr>
+                            <td colspan="2">Hi, we are looking for someone who is available on Tuesday.</td>
+                        </tr>
+                        </tbody>
+                    </table>
+                    <a role="button" class="btn btn-info apply-btn">Apply</a>
+                    <a role="button" class="btn btn-info collect-btn">Collect</a>
+                    <a role="button" class="btn btn-info back-btn">Back</a>
                 </div>
 
 
@@ -173,7 +232,7 @@
             <!--END CONTENT-->
         </div>
         <footer>
-            <div class="btn-group btn-group-justified"><a role="button" class="btn btn-info">Community</a><a role="button" class="btn btn-success">Me</a><a role="button" class="btn btn-warning">Contact</a>
+            <div class="btn-group btn-group-justified"><a href="#" role="button" class="btn btn-info">Community</a><a href="group_chat.html" role="button" class="btn btn-success">Me</a><a role="button" class="btn btn-default">Contact</a>
             </div>
         </footer>
         <!--END FOOTER-->
@@ -200,9 +259,31 @@
 <script src="vendors/moment/moment.js"></script>
 <script src="vendors/bootstrap-datepicker/js/bootstrap-datepicker.js"></script>
 <script src="vendors/bootstrap-daterangepicker/daterangepicker.js"></script>
-<!--CORE JAVASCRIPT-->
-<script src="js/main.js"></script>
-<!--LOADING SCRIPTS FOR PAGE-->
+<!--CORE JAVASCRIPT--><!--LOADING SCRIPTS FOR PAGE-->
+<script>
+    $(document).ready(function () {
+        $(".group-detail").hide();
+        $(".group-list .panel").click(function(){
+            $(".group-list").hide();
+            $(".group-detail").show();
+        });
+        $(".back-btn").click(function(){
+            $(".group-list").show();
+            $(".group-detail").hide();
+        });
+        $(".apply-btn").click(function(){
+            $(this).removeClass("btn-info");
+            $(this).addClass("btn-default");
+            $(this).html("Applied");
+        });
+        $(".collect-btn").click(function(){
+            $(this).removeClass("btn-info");
+            $(this).addClass("btn-default");
+            $(this).html("Collected");
+        });
+
+    });
+</script>
 
 </body>
 
