--- a/joblist_care.html
+++ b/joblist_care.html
@@ -46,7 +46,7 @@
                 </form>
                 <ul class="nav navbar navbar-top-links navbar-left mbn navbar-to-right">
                     <li class="switch">
-                        <span><a>Group</a></span><span>|</span><span><a>Job</a></span>
+                        <span><a href="grouplist_care.html">Group</a>|<a href="#" class="active">Job</a></span>
                     </li>
                     <li class="dropdown topbar-user">
                         <a data-hover="dropdown" href="#" class="dropdown-toggle"><img src="./images/User1.png" alt="" class="img-responsive img-circle" />&nbsp;<span class="hidden-xs">John Doe</span>&nbsp;<span class="caret"></span>
@@ -179,7 +179,7 @@
             <!--END CONTENT-->
         </div>
         <footer>
-            <div class="btn-group btn-group-justified"><a role="button" class="btn btn-info">Community</a><a role="button" class="btn btn-success">Me</a><a role="button" class="btn btn-warning">Contact</a>
+            <div class="btn-group btn-group-justified"><a href="#" role="button" class="btn btn-info">Community</a><a href="group_chat.html" role="button" class="btn btn-success">Me</a><a role="button" class="btn btn-default">Contact</a>
             </div>
         </footer>
         <!--END FOOTER-->
