--- a/group_chat.html
+++ b/group_chat.html
@@ -338,7 +338,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="btn-group btn-group-justified"><a role="button" class="btn btn-info">Community</a><a role="button" class="btn btn-success">Me</a><a role="button" class="btn btn-warning">Contact</a>
+                    <div class="btn-group btn-group-justified"><a href="joblist_care.html" role="button" class="btn btn-info">Community</a><a href="group_chat.html" role="button" class="btn btn-success">Me</a><a role="button" class="btn btn-default">Contact</a>
                     </div>
 
                 </div>
