new quit group page

--- a/group_chat.html
+++ b/group_chat.html
@@ -123,35 +123,44 @@
                                 </ul>
                                 <div id="myTabContent" class="tab-content">
                                     <div id="home" class="tab-pane fade in active">
-                                        <div class="chat-scroller">
-                                            <ul class="chats">
-                                                <li class="in"><img src="./images/User3.png" class="avatar img-responsive" />
-                                                    <div class="message"><span class="chat-arrow"></span><a href="#" class="chat-name">Admin</a>&nbsp;<span class="chat-datetime">at July 06, 2014 17:06</span><span class="chat-body">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.</span>
-                                                    </div>
-                                                </li>
-                                                <li class="out"><img src="./images/User1.png" class="avatar img-responsive" />
-                                                    <div class="message"><span class="chat-arrow"></span><a href="#" class="chat-name">Admin</a>&nbsp;<span class="chat-datetime">at July 06, 2014 18:06</span><span class="chat-body">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.</span>
-                                                    </div>
-                                                </li>
-                                                <li class="in"><img src="./images/User2.png" class="avatar img-responsive" />
-                                                    <div class="message"><span class="chat-arrow"></span><a href="#" class="chat-name">Admin</a>&nbsp;<span class="chat-datetime">at July 06, 2014 17:06</span><span class="chat-body">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.</span>
-                                                    </div>
-                                                </li>
-                                                <li class="out"><img src="./images/User1.png" class="avatar img-responsive" />
-                                                    <div class="message"><span class="chat-arrow"></span><a href="#" class="chat-name">Admin</a>&nbsp;<span class="chat-datetime">at July 06, 2014 18:06</span><span class="chat-body">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.</span>
-                                                    </div>
-                                                </li>
-                                                <li class="in"><img src="./images/User3.png" class="avatar img-responsive" />
-                                                    <div class="message"><span class="chat-arrow"></span><a href="#" class="chat-name">Admin</a>&nbsp;<span class="chat-datetime">at July 06, 2014 17:06</span><span class="chat-body">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.</span>
-                                                    </div>
-                                                </li>
-                                            </ul>
-                                        </div>
-                                        <div class="chat-form">
-                                            <div class="input-group">
-                                                <input id="input-chat" type="text" placeholder="Type a message here..." class="form-control" /><span id="btn-chat" class="input-group-btn"><button type="button" class="btn btn-green"><i class="fa fa-check"></i></button></span>
+                                        <div id="group-joined">
+                                            <div class="chat-scroller">
+                                                <ul class="chats">
+                                                    <li class="in"><img src="./images/User3.png" class="avatar img-responsive" />
+                                                        <div class="message"><span class="chat-arrow"></span><a href="#" class="chat-name">Robin</a>&nbsp;<span class="chat-datetime">at July 06, 2014 17:06</span><span class="chat-body">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.</span>
+                                                        </div>
+                                                    </li>
+                                                    <li class="out"><img src="./images/User1.png" class="avatar img-responsive" />
+                                                        <div class="message"><span class="chat-arrow"></span><a href="#" class="chat-name">Me</a>&nbsp;<span class="chat-datetime">at July 06, 2014 18:06</span><span class="chat-body">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.</span>
+                                                        </div>
+                                                    </li>
+                                                    <li class="in"><img src="./images/User2.png" class="avatar img-responsive" />
+                                                        <div class="message"><span class="chat-arrow"></span><a href="#" class="chat-name">Ted</a>&nbsp;<span class="chat-datetime">at July 06, 2014 17:06</span><span class="chat-body">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.</span>
+                                                        </div>
+                                                    </li>
+                                                    <li class="out"><img src="./images/User1.png" class="avatar img-responsive" />
+                                                        <div class="message"><span class="chat-arrow"></span><a href="#" class="chat-name">Me</a>&nbsp;<span class="chat-datetime">at July 06, 2014 18:06</span><span class="chat-body">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.</span>
+                                                        </div>
+                                                    </li>
+                                                    <li class="in"><img src="./images/User3.png" class="avatar img-responsive" />
+                                                        <div class="message"><span class="chat-arrow"></span><a href="#" class="chat-name">Robin</a>&nbsp;<span class="chat-datetime">at July 06, 2014 17:06</span><span class="chat-body">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.</span>
+                                                        </div>
+                                                    </li>
+                                                </ul>
+                                            </div>
+
+
+                                            <div class="chat-form">
+                                                <div class="input-group">
+                                                    <input id="input-chat" type="text" placeholder="Type a message here..." class="form-control" /><span id="btn-chat" class="input-group-btn"><button type="button" class="btn btn-green"><i class="fa fa-check"></i></button></span>
+                                                </div>
                                             </div>
                                         </div>
+                                        <div id="group-no">
+                                            <h4>Please select and join a group from here:</h4>
+                                            <a href="grouplist_care.html" type="button" class="btn-info text-center col-xs-offset-3 col-xs-6">Group List</a>
+                                        </div>
+
                                     </div>
                                     <div id="profile" class="tab-pane fade">
                                         <div style="overflow: hidden;" class="portlet-body job-tab">
@@ -413,12 +422,12 @@
                     $obj.val(""); // CLEAR TEXT ON TEXTAREA
 
                     var element = "";
-                    element += "<li class='in'>";
-                    element += "<img class='avatar' src='https://s3.amazonaws.com/uifaces/faces/twitter/kolage/48.jpg'>";
+                    element += "<li class='out'>";
+                    element += "<img class='avatar' src='images/User1.png'>";
                     element += "<div class='message'>";
                     element += "<span class='chat-arrow'></span>";
-                    element += "<a class='chat-name' href='#'>Admin &nbsp;</a>";
-                    element += "<span class='chat-datetime'>at July 6, 2014 " + h + ":" + m + "</span>";
+                    element += "<a class='chat-name' href='#'>Me &nbsp;</a>";
+                    element += "<span class='chat-datetime'>at October 18, 2017 " + h + ":" + m + "</span>";
                     element += "<span class='chat-body'>" + content + "</span>";
                     element += "</div>";
                     element += "</li>";
@@ -482,6 +491,7 @@
     });
     $(document).ready(function () {
         $(".job-detail").hide();
+        $("#group-no").hide();
         $(".job").click(function () {
             $(".job-list").hide();
             $(".job-detail").show();
@@ -506,6 +516,13 @@
             $(this).find("span").text($now);
             e.stopPropagation();
         });
+        $("#myTab li:first-of-type button").click(function(){
+            $("#group-joined").hide();
+            $("#group-no").show();
+            $("#myTab li:first-of-type button").hide();
+
+        });
+
 
     });
 
