--- a/grouplist_care.html
+++ b/grouplist_care.html
@@ -34,7 +34,7 @@
 <body class="horizontal-menu-page clear-cookie ">
 <div>
     <div id="header-topbar-option-demo" class="page-header-topbar">
-        <nav id="topbar" role="navigation" style="margin-bottom: 0; z-index: 2;" class="navbar navbar-default navbar-fixed-top"">
+        <nav id="topbar" role="navigation" style="margin-bottom: 0; z-index: 2;" class="navbar navbar-default navbar-fixed-top">
         <div class="navbar-header">
             <a id="logo" href="index.html" style="padding:15px"><div style="clear:both;"><span class="logo-text" style="vertical-align: top">&nbsp WePet <i class="fa fa-paw" style=""></i></span></div></a>
         </div>
@@ -109,7 +109,7 @@
                             <div class="row">
                                 <div class="col-xs-4"><img src="./images/group01.png" style="width: 70px; height: 70px;" class="media-object"></div>
                                 <div class="group-info col-xs-8">
-                                    Group Apple <button type="button" class="btn btn-info btn-xs btn-to-right">Apply </button>
+                                    Group Apple <button type="button" class="btn btn-info btn-xs btn-to-right apply-btn-out">Apply </button>
                                     <p><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star-half-o"></i></p>
                                     <p>We have been taking care of: bulldog, golden retriever</p>
                                 </div>
@@ -122,7 +122,7 @@
                             <div class="row">
                                 <div class="col-xs-4"><img src="./images/group02.png" style="width: 70px; height: 70px;" class="media-object"></div>
                                 <div class="group-info col-xs-8">
-                                    Group Apple <button type="button" class="btn btn-info btn-xs btn-to-right">Apply </button>
+                                    Group Apple <button type="button" class="btn btn-info btn-xs btn-to-right apply-btn-out">Apply </button>
                                     <p><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star-half-o"></i></p>
                                     <p>We have been taking care of: bulldog, golden retriever</p>
                                 </div>
@@ -135,7 +135,7 @@
                             <div class="row">
                                 <div class="col-xs-4"><img src="./images/group03.png" style="width: 70px; height: 70px;" class="media-object"></div>
                                 <div class="group-info col-xs-8">
-                                    Group Apple <button type="button" class="btn btn-info btn-xs btn-to-right">Apply </button>
+                                    Group Apple <button type="button" class="btn btn-info btn-xs btn-to-right apply-btn-out">Apply </button>
                                     <p><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star-half-o"></i></p>
                                     <p>We have been taking care of: bulldog, golden retriever</p>
                                 </div>
@@ -147,7 +147,7 @@
                             <div class="row">
                                 <div class="col-xs-4"><img src="./images/group04.png" style="width: 70px; height: 70px;" class="media-object"></div>
                                 <div class="group-info col-xs-8">
-                                    Group Apple <button type="button" class="btn btn-info btn-xs btn-to-right">Apply </button>
+                                    Group Apple <button type="button" class="btn btn-info btn-xs btn-to-right apply-btn-out">Apply </button>
                                     <p><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star-half-o"></i></p>
                                     <p>We have been taking care of: bulldog, golden retriever</p>
                                 </div>
@@ -160,7 +160,7 @@
                             <div class="row">
                                 <div class="col-xs-4"><img src="./images/group05.png" style="width: 70px; height: 70px;" class="media-object"></div>
                                 <div class="group-info col-xs-8">
-                                    Group Apple <button type="button" class="btn btn-info btn-xs btn-to-right">Apply </button>
+                                    Group Apple <button type="button" class="btn btn-info btn-xs btn-to-right apply-btn-out">Apply </button>
                                     <p><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star-half-o"></i></p>
                                     <p>We have been taking care of: bulldog, golden retriever</p>
                                 </div>
@@ -264,6 +264,10 @@
     $(document).ready(function () {
         $(".group-detail").hide();
         $(".group-list .panel").click(function(){
+            var $img_url = $(this).find('img').attr('src');
+            $(".group-detail").find('.col-xs-4 img').attr('src',$img_url);
+            var $apply_status = $(this).find('button').html();
+            $(".group-detail").find('.apply-btn').html($apply_status);
             $(".group-list").hide();
             $(".group-detail").show();
         });
@@ -275,11 +279,19 @@
             $(this).removeClass("btn-info");
             $(this).addClass("btn-default");
             $(this).html("Applied");
+
         });
         $(".collect-btn").click(function(){
             $(this).removeClass("btn-info");
             $(this).addClass("btn-default");
             $(this).html("Collected");
+        });
+        $(".apply-btn-out").click(function(e){
+            $(this).removeClass("btn-info");
+            $(this).addClass("btn-default");
+            $(this).html("Applied");
+
+            e.stopPropagation();
         });
 
     });
